[package]
name = "tax-calculator"
version = "0.1.0"
edition = "2018"

[lib]
name = "rust"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
# crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.21.2"
features = ["extension-module"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3-log = "0.10.0"
log = "0.4.14"
polars = "0.33.0"
quantlib = "0.1.0"
aws-sdk-s3 = "0.0.26-alpha"
tokio = { version = "1", features = ["full"] }